--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,9 +12,48 @@
     },
     "tasks": [
         {
+            "label": "webpack: dev (Main)",
+            "type": "shell",
+            "command": "yarn dev",
+            "args": [],
+            "group": "build",
+            "promptOnClose": true,
+            "isBackground": true,
+            "problemMatcher": {
+                "owner": "webpack",
+                "severity": "error",
+                "fileLocation": "absolute",
+                "pattern": [
+                    {
+                        "regexp": "ERROR in (.*)",
+                        "file": 1
+                    },
+                    {
+                        "regexp": "\\((\\d+),(\\d+)\\):(.*)",
+                        "line": 1,
+                        "column": 2,
+                        "message": 3
+                    }
+                ],
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": ".",
+                    "endsPattern": "Compiled"
+                }
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            }
+        },
+        {
             "label": "webpack: dev server",
             "type": "shell",
-            "command": "yarn dev && yarn watch",
+            "command": "yarn watch",
             "args": [],
             "group": "build",
             "promptOnClose": true,
@@ -88,14 +127,6 @@
                 "showReuseMessage": true,
                 "clear": false
             }
-        },
-        {
-            "label": "postdebugKill",
-            "type": "process",
-            "command": [
-                "${command:workbench.action.tasks.terminate}",
-                "${command:workbench.action.acceptSelectedQuickOpenItem}"
-            ]
         },
         {
             "label": "postdebugKill",
