--- a/package.json
+++ b/package.json
@@ -39,12 +39,12 @@
     },
     "dependencies": {
         "@date-io/moment": "^1.3.5",
-        "@material-ui/core": "^3.9.3",
+        "@material-ui/core": "^4.0.1",
+        "@material-ui/pickers": "^3.0.0",
         "electron-devtools-installer": "^2.2.4",
         "electron-log": "^3.0.5",
         "electron-updater": "^4.0.6",
         "knex": "^0.17.1",
-        "material-ui-pickers": "^2.2.4",
         "moment": "^2.24.0",
         "node-localstorage": "^1.3.1",
         "react": "^16.8.6",
@@ -59,6 +59,7 @@
     "devDependencies": {
         "@commitlint/cli": "^8.0.0",
         "@commitlint/config-conventional": "^8.0.0",
+        "@date-io/core": "^1.3.6",
         "@semantic-release/changelog": "^3.0.2",
         "@semantic-release/exec": "^3.3.2",
         "@semantic-release/git": "^7.0.8",
@@ -85,6 +86,7 @@
         "mini-css-extract-plugin": "^0.7.0",
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "prop-types": "^15.7.2",
         "react-hot-loader": "^4.8.4",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
