--- a/package.json
+++ b/package.json
@@ -57,6 +57,12 @@
         "uuid": "^3.3.2"
     },
     "devDependencies": {
+        "@babel/cli": "^7.5.0",
+        "@babel/core": "^7.5.4",
+        "@babel/plugin-proposal-class-properties": "^7.5.0",
+        "@babel/preset-env": "^7.5.4",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/preset-typescript": "^7.3.3",
         "@commitlint/cli": "^8.0.0",
         "@commitlint/config-conventional": "^8.0.0",
         "@date-io/core": "^1.3.6",
@@ -73,7 +79,9 @@
         "@types/sqlite3": "^3.1.5",
         "@types/universal-analytics": "^0.4.2",
         "@types/uuid": "^3.4.4",
+        "babel-loader": "^8.0.6",
         "commitizen": "^3.1.1",
+        "core-js": "3",
         "csp-html-webpack-plugin": "^3.0.2",
         "cz-conventional-changelog": "^2.1.0",
         "electron": "^5.0.0",
@@ -87,7 +95,6 @@
         "rimraf": "^2.6.3",
         "semantic-release": "^15.13.3",
         "source-map-loader": "^0.2.4",
-        "ts-loader": "^6.0.2",
         "tslint": "^5.16.0",
         "typescript": "^3.4.5",
         "webpack": "^4.30.0",
